--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,22 @@
-<p>
-  header works!
-</p>
+<!-- <script src="https://cdn.jsdelivr.net/npm/typeit@5.6.0/dist/typeit.min.js" /> -->
+<script src="../node_modules/typeit/dist/typeit.js"></script>
+<div class="backgroundIMG makeitCenter setColorWhite">
+	<div class="display_TopLeft">
+		<h2>{{logo}}</h2>
+	</div>
+	<div class="display_MiddlePage">
+		<!-- <p id="element"></p> -->
+		<h2>My Name is <span id="input">
+			<h1 class="dropFromTopanimate">{{myString}}</h1>
+		</span>
+		</h2>
+		<br>
+		<h2 style="font-size: 35px;">Georgia Insitute of Technology</h2>
+		<!-- <br> -->
+		<h3 style="color: white!important; font-size:30px">BS. Computer Science</h3>
+		<!-- <a href="https://www.dropbox.com/home/Career%20Interview%20%26%20Stuffs/Resume?preview=Thinh+Nguyen+-+Spring+2018+Resume.pdf"> View Resume </a> <br>
+		<a href="tnntech@gatech.edu">tnntech@gatech.edu</a>
+		<br>
+		<a href="http://github.com/tnnguyen7">http://github.com/tnnguyen7</a -->>
+	</div>
+</div>
